<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete"
        android:title="@string/clear_history"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_list_or_grid"
        android:icon="@drawable/ic_grid"
        android:orderInCategory="100"
        android:title="@string/list_or_grid"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_seach"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_search2"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_fullscreen"
        android:icon="@drawable/ic_fullscreen"
        android:orderInCategory="100"
        android:title="@string/full_screen"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_bookmarks"
        android:icon="@drawable/ic_book_marks_white"
        android:orderInCategory="100"
        android:title="@string/bookmarks"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>
