<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_2x"
            android:paddingRight="@dimen/dimen_2x">


            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2x"
                android:background="@color/white"
                android:hint="@string/input_your_name"
                android:imeOptions="actionNext"

                android:inputType="textCapWords"
                android:lines="1"
                android:padding="@dimen/dimen_2x"
                android:textColor="@color/grey_hard"
                android:textSize="@dimen/text_size_normal" />


            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_3x"
                android:background="@color/white"
                android:hint="@string/input_your_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="@dimen/dimen_2x"
                android:textColor="@color/grey_hard"
                android:textSize="@dimen/text_size_normal" />


            <EditText
                android:id="@+id/edt_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_3x"
                android:background="@color/white"
                android:hint="@string/input_subject"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:lines="1"

                android:padding="@dimen/dimen_2x"
                android:textColor="@color/grey_hard"
                android:textSize="@dimen/text_size_normal" />


            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_3x"
                android:background="@color/white"
                android:gravity="top|left"
                android:hint="@string/input_your_feedback"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="6"
                android:padding="@dimen/dimen_2x"
                android:singleLine="false"
                android:textColor="@color/grey_hard"
                android:textSize="@dimen/text_size_normal" />

            <Button
                android:id="@+id/btn_send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2x"
                android:background="@drawable/bg_btn_feedback"
                android:text="@string/send_feedback" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
